# staryourney

./: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
src/: App.tsx  const.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/events/: get_keywords_event.rs  mod.rs
src-tauri/src/plugins/: macos_traffic_lights.rs  mod.rs
src/components/molecules/: MarkdownEditor.tsx
src/components/molecules/editor/: MarkdownEditor.tsx
src/components/organisms/: Entries.tsx  Navbar.tsx  NewEntry.tsx  Sidebar.tsx
src/components/ui/: button.tsx
src/database/: client.ts  editor.ts  keywords.ts  og-metadata.ts
src/integration/: entries.ts  filesystem.ts  get-asset.ts  get-og-info.ts  tauri-helpers.ts
src/lib/: dates.ts  encoders.ts  groupby.ts
src/stores/: entries.ts  ui.tsx
